Enemies added to the game

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <img src="img/walkingLeft.svg" id="walk-left">
     <img src="img/jumpLeft.svg" id="jump-left">
     <img src="img/jumpRight.svg" id="jump-right">
+    <img src="img/greenSlimeMovement.svg" id="enemy-green">
+    <img src="img/orangeSlimeMovement.svg" id="enemy-orange">
     <canvas></canvas>
     <script src="canvas.js"></script>
 </body>
