defer atribute added to script

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The trip of the Wizard</title>
     <link rel="stylesheet" href="style.css">
+    <script defer src="canvas.js"></script>
 </head>
 <body>
     <img src="img/land-floating.png" id="land-floating">
@@ -26,6 +27,5 @@
     <img src="img/greenSlimeMovement.svg" id="enemy-green">
     <img src="img/orangeSlimeMovement.svg" id="enemy-orange">
     <canvas></canvas>
-    <script src="canvas.js"></script>
 </body>
 </html>
