--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <img class="canvas-asset" src="img/jumpRight.svg" id="jump-right">
     <img class="canvas-asset" src="img/greenSlimeMovement.svg" id="enemy-green">
     <img class="canvas-asset" src="img/orangeSlimeMovement.svg" id="enemy-orange">
-    <img src="img/title.svg" alt="title" class="game-title">
+    <img src="img/title.svg" alt="title" class="game-title" id="game-title">
     <div class="canvas-container">
         <div class="control-window-wrapper">
             <div class="control-window-container" id="controls-window">
