--- a/index.html
+++ b/index.html
@@ -29,10 +29,16 @@
     <img class="canvas-asset" src="img/orangeSlimeMovement.svg" id="enemy-orange">
     <img src="img/title.svg" alt="title" class="game-title" id="game-title">
     <div class="canvas-container">
+        <div class="play-game-wrapper">
+            <div class="play-game-container" id="play-game-window">
+                <img id="play-game-button" src="img/play-game-button.svg" alt="Play Game">
+                <img class="control-window" src="img/play-game-window.svg" alt="Play Game Window">    
+            </div>
+        </div>
         <div class="control-window-wrapper">
             <div class="control-window-container" id="controls-window">
                 <img id="close-button" src="img/close-window.svg" alt="close">
-                <img class="control-window" src="img/control-window.svg" alt="controls">    
+                <img class="control-window" src="img/control-window.svg" alt="Controls Window">    
             </div>
         </div>
        <div class="winning-window-wrapper">
